# bvcp

./: .gitattributes  .gitignore  .prettierignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  README.md  nixpacks.toml  package.json  railway.toml
apps/api/prisma/: schema.prisma
apps/api/src/: index.test.ts  index.ts
apps/api/src/lib/: prisma.ts
apps/api/src/routes/: auth.ts  health.ts  repositories.ts
apps/desktop/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  config.ts  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: Layout.module.css  Layout.tsx
apps/desktop/src/pages/: Auth.module.css  Dashboard.module.css  Dashboard.tsx  Home.module.css  Home.tsx  Login.tsx  Register.tsx
apps/desktop/src/styles/: globals.css
apps/web/: README.md  next.config.mjs  package.json  vercel.json
apps/web/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
apps/web/src/app/dashboard/: dashboard.module.css  page.tsx
apps/web/src/app/login/: page.tsx  (+1 more)
docs/: deploy.md  license-guide.md  spec.md
docs/adr/: README.md
docs/api/: README.md
infra/compose/: README.md  docker-compose.yml
infra/docker/: README.md
infra/scripts/: README.md
(+3 files in other folders)
