[package]
name = "bvcp-desktop"
version = "0.0.1"
description = "BVCP Desktop Application"
authors = ["Yorikawa Aise"]
edition = "2021"

# 独立したワークスペースとして扱う
[workspace]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
